@@ -1,3 +1,5 @@
+2020-12-23 Franz Holzinger <franz@ttproducts.de>
+    * enhancement for DoctrineConnection: Catch and rethrow the exception for method executeQuery in order to generate a debug output in the error case.
 
 2020-11-13 Franz Holzinger <franz@ttproducts.de>
     * restructure the DebugApi call. No database objects should be parameters.
